--- a/templates/test_application/index_magic.html
+++ b/templates/test_application/index_magic.html
@@ -30,12 +30,27 @@
     <script src="https://magicbox.bkclouds.cc/static_api/analysis.js"></script>
     <script src="${STATIC_URL}assets/bkDialog-1.0/js/dialog.js"></script>
     <link href="${STATIC_URL}assets/bkDialog-1.0/css/ui-dialog.css" rel="stylesheet">
+    <style type="text/css">
+        .forbidden_layer{
+           position: fixed;
+           top:0px;
+           width: 100%;
+           height: 100%;
+           background-color: #9d9d9d;
+           opacity: 0.5;
+           z-index: 3;
+        }
+    </style>
     <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
     <!--[if lt IE 9]><script src="https://magicbox.bkclouds.cc/static_api/v3/assets/js/html5shiv.min.js"></script><script src="https://magicbox.bkclouds.cc/static_api/v3/assets/js/respond.min.js"></script><![endif]-->
 </head>
 
 <body class="bg-white" data-bg-color="bg-white">
     <div class="king-page-box">
+        <div class="forbidden_layer" id="forbidden_layer" style="display: none"></div>
+        <div class="king-loading" id="loding-img-2" style="display: none;">
+            <img src="https://magicbox.bk.tencent.com/static_api/v3/components/loading1/images/loading_2_b_36x36.gif" />
+        </div>
         <div class="king-layout1-header">
             <nav class="">
                 <div style="overflow:hidden; z-index: inherit; background-color: #0d1015" class="navbar king-horizontal-nav1 king-horizontal-info f14">
@@ -202,6 +217,8 @@
         }
         
         $('#new_menu_btn').click(function () {
+            $('#loding-img-2').show()
+            $('#forbidden_layer').show()
             selectid = $('#menu_version_select option:selected').val()
             storecode = $('#store_code_id').val()
             if(storecode == ""){
@@ -210,6 +227,8 @@
                 errorAlert("非正常门店ID，门店ID必须是1个或多个6位数字，并且以英文逗号分隔。")
             }else{
                 $.get('/' + selectid + '/' + storecode.replace(/,/g,"_") + '/new_menu_m/', {}, function (res) {
+                    $('#loding-img-2').hide()
+                    $('#forbidden_layer').hide()
                     if(res.code==0){
                         successAlert("新上门店成功")
                     }
