--- a/templates/base.html
+++ b/templates/base.html
@@ -1,95 +1,148 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%block name='head'>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>开发框架|蓝鲸智云社区版</title>
-        <meta name="description" content=""/>
-        <meta name="author" content=""/>
-        <link rel="shortcut icon" href="${STATIC_URL}favicon.ico" type="image/x-icon">
-        <!-- bootstrap css -->
-		    <link href="${STATIC_URL}assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		    <!-- 禁止bootstrap 响应式 （app根据自身需求启用或禁止bootstrap响应式） -->
-		    <link href="${STATIC_URL}assets/bootstrap-3.3.4/css/bootstrap_noresponsive.css" rel="stylesheet">
-		    <!--自定义css-->
-		    <link href="${STATIC_URL}css/bk.css?v=${STATIC_VERSION}" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="${STATIC_URL}css/index.css?v=${STATIC_VERSION}">
-        <!-- 这个是全局配置，如果需要在js中使用app_id和site_url,则这个javascript片段一定要保留 -->
-        <script type="text/javascript">
-	    	  var app_id = "${APP_ID}";
-			    var site_url = "${SITE_URL}";	  // app的url前缀,在ajax调用的时候，应该加上该前缀
-			    var static_url = "${STATIC_URL}"; // 静态资源前缀
-	      </script>
-    </%block>
-  </head>
 
-  <body>
-    <!--顶部导航 Start-->
-    <nav class="navbar navbar-default king-horizontal-nav2 navbar-mt0" role="navigation">
-        <div class="container" style="width: 100%;">
-            <div class="navbar-header col-md-4 col-sm-4 col-xs-4 logo">
-                <a class="navbar-brand" href="${SITE_URL}">
-                    蓝鲸智云开发框架
-                </a>
-            </div>
-            <div class="collapse navbar-collapse navbar-responsive-collapse">
-                <ul class="nav navbar-nav">
-                  <%
-                    home = dev_guide = contactus = ''
-                    relative_path = APP_PATH
-                    if relative_path == SITE_URL or relative_path.startswith(SITE_URL + "?"):
-                      home = 'king-navbar-active'
-                    elif relative_path.startswith(SITE_URL + "dev-guide/"):
-                      dev_guide = 'king-navbar-active'
-                    elif relative_path.startswith(SITE_URL + "contactus/"):
-                      contactus = 'king-navbar-active'
-                  %>
-                  <li class="${home}"><a href="${SITE_URL}"><span>首页</span></a></li>
-                  <li class="${dev_guide}"><a href="${SITE_URL}dev-guide/"><span>开发指引</span></a></li>
-                  <li class="${contactus}"><a href="${SITE_URL}contactus/"><span>联系我们</span></a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <a href="###" class="avatar">
-                    <img src="${STATIC_URL}img/getheadimg.jpg" width="40" alt="Avatar" class="avatar-img">
-                    % if request.user.is_superuser:
-                        <i class="crown"></i>
-                    % endif
-                    <span>${request.user.username}</span>
-                  </a>
-                  <!--退出登录-->
-                  <a id="logout" href="${LOGOUT_URL}">注销</a>
-                </ul>
-            </div>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <!-- 若您需要使用Kendo UI Professional，请联系版权人获得合法的授权或许可。 -->
+    <!-- Bootstrap css -->
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <!-- kendo ui css -->
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.common.min.css" rel="stylesheet">
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.default.min.css" rel="stylesheet">
+    <!-- font-awesome -->
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/fontawesome/css/font-awesome.css" rel="stylesheet">
+    <!--蓝鲸提供的公用样式库 -->
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/bk/css/bk.css" rel="stylesheet">
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/bk/css/bk_pack.css" rel="stylesheet">
+    <!-- 如果要使用Bootstrap的js插件，必须先调入jQuery -->
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
+    <!-- 包括所有bootstrap的js插件或者可以根据需要使用的js插件调用　-->
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/bootstrap-3.3.4/js/bootstrap.min.js"></script>
+    <!-- 包括所有kendoui的js插件或者可以根据需要使用的js插件调用　-->
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/js/kendo.all.min.js"></script>
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+    <script src="https://magicbox.bkclouds.cc/static_api/v3/bk/js/bk.js"></script>
+    <!-- 数据埋点统计 -->
+    <script src="https://magicbox.bkclouds.cc/static_api/analysis.js"></script>
+    <script src="${STATIC_URL}assets/bkDialog-1.0/js/dialog.js"></script>
+    <script type="text/javascript">
+        var app_id = "${APP_ID}";
+        var site_url = "${SITE_URL}";	  // app的url前缀,在ajax调用的时候，应该加上该前缀
+        var static_url = "${STATIC_URL}"; // 静态资源前缀
+    </script>
+    <link href="${STATIC_URL}assets/bkDialog-1.0/css/ui-dialog.css" rel="stylesheet">
+    <style type="text/css">
+        .forbidden_layer{
+           position: fixed;
+           top:0px;
+           width: 100%;
+           height: 100%;
+           background-color: #9d9d9d;
+           opacity: 0.5;
+           z-index: 999;
+        }
+    </style>
+    <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
+    <!--[if lt IE 9]><script src="https://magicbox.bkclouds.cc/static_api/v3/assets/js/html5shiv.min.js"></script><script src="https://magicbox.bkclouds.cc/static_api/v3/assets/js/respond.min.js"></script><![endif]-->
+</head>
+
+<body class="bg-white" data-bg-color="bg-white">
+    <div class="forbidden_layer" id="forbidden_layer" style="display: none"></div>
+    <div class="king-loading" id="loding-img-2" style="display: none;">
+        <img src="https://magicbox.bk.tencent.com/static_api/v3/components/loading1/images/loading_2_b_36x36.gif" />
+    </div>
+    <div class="king-page-box">
+
+        <div class="king-layout1-header">
+            <nav class="">
+                <div style="overflow:hidden; z-index: inherit; background-color: #0d1015" class="navbar king-horizontal-nav1 king-horizontal-info f14">
+                    <div class="navbar-container">
+                        <div class="navbar-header pull-left">
+                            <a class="navbar-brand" href="javascript:;">
+                                <img src="https://magicbox.bkclouds.cc/static_api/v3/bk/images/logo.png" class="logo"> </a>
+                        </div>
+                        <ul class="nav navbar-nav pull-left m0">
+                            <li class="active"><a href="${SITE_URL}">首页</a></li>
+                            <li><a href="javascript:void(0);">关于我们</a></li>
+                            <li><a href="javascript:void(0);">联系我们</a></li>
+                        </ul>
+                        <div class="navbar-header pull-right">
+                            <ul class="nav">
+                                <li class="user-info">
+                                    <a href="javascript:;">
+                                        <img class="img-rounded" src="https://magicbox.bkclouds.cc/static_api/v3/components/horizontal_nav1/images/avatar.png">
+                                        <span>admin</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-    </nav>
-    <!--顶部导航 End-->
-    <!-- 固定宽度居中 start -->
-    <%block name='content'></%block>
-    <!-- 固定宽度表单居中 end -->
-    <!-- 尾部声明 start -->
-    <div class="foot" id="footer">
-        <%block name='footerline'></%block>
-        <ul class="links ft">
-            <li>
-                <a id="contact_us" class="link">QQ咨询(800802001)</a>
-                | <a href="http://bbs.bk.tencent.com/forum.php" target="_blank" hotrep="hp.footer.feedback" class="link">蓝鲸论坛</a>
-                | <a href="http://bk.tencent.com/" target="_blank" hotrep="hp.footer.feedback" class="link">蓝鲸官网</a>
-                | <a href="${BK_PLAT_HOST}" target="_blank" hotrep="hp.footer.feedback" class="link">蓝鲸智云工作台</a>
-            </li>
-            <li><p class="copyright">Copyright © 2012-${NOW.year} Tencent BlueKing. All Rights Reserved.</p> </li>
-          <li><p class="copyright">蓝鲸智云 版权所有</p> </li>
-        </ul>
-      </div>
-      <!-- 尾部声明 start -->
-    <!-- jquery js  -->
-    <script src="${STATIC_URL}js/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="${STATIC_URL}js/jquery.json-2.3.min.js" type="text/javascript"></script>
-    <!-- bootstrap js  -->
-    <script src="${STATIC_URL}assets/bootstrap-3.3.4/js/bootstrap.min.js" type="text/javascript"></script>
-    <!--配置js  勿删-->
-    <script src="${STATIC_URL}js/settings.js?v=${STATIC_VERSION}" type="text/javascript"></script>
-    ${self.body()}
-    <!-- 兼容性设置 -->
-    <!--[if lt IE 6]>\xe8\x93\x9d\xe9\xb2\xb8\xe6\x99\xba\xe8\x90\xa5\x20\xe7\x89\x88\xe6\x9d\x83\xe6\x89\x80\xe6\x9c\x89<![endif]-->
-  </body>
+        <div class="king-layout1-main clearfix">
+            <!-- sidebar start -->
+            <div class="king-layout1-sidebar" style="width:216px;">
+                <nav style="height:100%;" class="   f14">
+                    <div class="king-vertical-nav4">
+                        <div class="sidebar-inner">
+                            <ul class="navi">
+                                <li class="has_submenu current open active c-open">
+                                    <a href="${SITE_URL}new_version"> <i class="fa fa-tasks ">                        </i>
+                                        <span>门店发版</span>
+                                    </a>
+                                </li>
+                                <li class="has_submenu current open c-open">
+                                    <a href="javascript:void(0);"> <i class="fa fa-tasks ">                        </i>
+                                        <span>门店换版</span>
+                                    </a>
+                                </li>
+                                <li class="has_submenu current open c-open">
+                                    <a href="javascript:void(0);"> <i class="fa fa-tasks ">                        </i>
+                                        <span>基础版本（从门店）</span>
+                                    </a>
+
+                                </li>
+                                <li class="has_submenu current open c-open">
+                                    <a href="javascript:void(0);"> <i class="fa fa-tasks ">                        </i>
+                                        <span>基础版本（手动）</span>
+
+                                    </a>
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <!-- sidebar end -->
+            <!-- content start -->
+            <%block name="content"></%block>
+            <!-- content end -->
+        </div>
+    </div>
+    <script src="${STATIC_URL}js/utils.js"></script>
+    <script src="${STATIC_URL}js/index_magic.js"></script>
+    <script>
+        $(function(){
+             var li = $('.navi li');
+             li.each(function(){
+             $(this).click(function(){
+             if( $(this).hasClass('c-open')){
+                $(this).find('ul').slideUp(350);
+                $(this).removeClass('c-open');
+             }else{
+               $(this).find('ul').slideDown(350);
+               $(this).addClass('c-open');
+               }
+              })
+           });
+        })
+    </script>
+</body>
+
 </html>
