--- a/templates/test_application/new_version.html
+++ b/templates/test_application/new_version.html
@@ -39,10 +39,11 @@
                                         <td style="width: 20%;">#columnName2#</td>
                                         <td style="width: 20%;">#columnName3#</td>
                                         <td>#columnName4#</td>
-                                        <td><select>
-                                            <option>1</option>
-                                            <option>12</option>
-                                        </select></td>
+                                        <td>
+                                            <select class="menu_version_select" name="" >
+
+                                            </select>
+                                        </td>
                                     </tr>
                                 </template>
                                 <!-- 设置面板End -->
@@ -57,6 +58,7 @@
     </div>
 
             <!-- content end -->
+    <script src="${STATIC_URL}js/new_version.js"></script>
     <script>
         content_html = "    <div class=\"king-page-box\">\n" +
             "        <div class=\"king-container clearfix\">\n" +
@@ -114,20 +116,22 @@
                     $('#code_1527301039797 tbody').html(_html);
                     ## 填入头部
                     $('#code_1527301039797 thead').html(renderTpl(headerTpl,res.catalogues));
-
+                    $.get(site_url + 'get_menu_version', {}, function (res) {
+                        for (var key in res.data){
+                            $('.menu_version_select').append("<option value=" + key + ">" + res.data[key] + "</option>")
+                        }
+                    })
                     ## 发版操作
-                    var okList = new Array()
-                    var failList = new Array()
                     $('#newversion').click(function () {
-                        for(var i=0, len=list.length; i< len; i++){
-                            debugger
-                            var item = list[i];
-                            if(item['isOk'] == 1){
-                                okList.push(item)
-                            }else{
-                                failList.push(item)
+                        data = []
+                        for(var i =0, len=list.length; i< len; i++){
+                            if(list[i]['isOk'] == 1){
+                                storeid = list[i]['columnName1']
                             }
                         }
+                        $.get(site_url + "new_menu", {data: data}, function (res) {
+                            
+                        })
                     })
 
                 }
