门店发版功能样例开发完成（根据5-28晚上与qxf讨论结果修改）

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
     <script src="https://magicbox.bkclouds.cc/static_api/v3/bk/js/bk.js"></script>
     <!-- 数据埋点统计 -->
     <script src="https://magicbox.bkclouds.cc/static_api/analysis.js"></script>
+    <script src="${STATIC_URL}js/csrftoken.js"></script>
     <script src="${STATIC_URL}assets/bkDialog-1.0/js/dialog.js"></script>
     <script type="text/javascript">
         var app_id = "${APP_ID}";
