--- a/templates/test_application/new_version.html
+++ b/templates/test_application/new_version.html
@@ -100,7 +100,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -261,7 +260,7 @@
                 "                <div class=\"form-group has-feedback clearfix \">\n" +
                 "                    <label class=\"control-label col-sm-2 pt0\" for=\"introduction\">门店ID：</label>\n" +
                 "                    <div class=\"col-sm-10\">\n" +
-                "                        <textarea id=\"store_ids\" class=\"form-control\" rows=\"6\" placeholder=\"填入以逗号分隔的6位数字\"></textarea>\n" +
+                "                        <textarea id=\"store_ids\" class=\"form-control\" rows=\"6\" placeholder=\"填入门店ID（6位数字）\r\n支持【换行】分隔，【逗号】分隔，【换行加逗号】分隔\"></textarea>\n" +
                 "                    </div>\n" +
                 "                </div>\n" +
                 "            </form>\n" +
@@ -272,7 +271,17 @@
             title: '填入门店ID',
             cancel: function (){},
             ok: function() {
-                var store_id_array = $('#store_ids').val().split(',')
+                ## 门店id支持回车换行符
+                debugger
+                $.trim($('#store_ids').val())
+                var raw_store_id_array = $('#store_ids').val().split(/[,(\r\n)]/)
+                ## 对每个数组元素进行处理，删除两端空白后，如果为空字符串，就删除该元素
+                var store_id_array = []
+                for(var index in raw_store_id_array){
+                    if($.trim(raw_store_id_array[index]) != ""){
+                        store_id_array.push(raw_store_id_array[index])
+                    }
+                }
                 if(store_id_array == ""){
                     myutils.errorAlert("门店ID不能为空")
                     return
