查询门店ID时，支持【换行】分隔，【逗号】分隔，【换行加逗号】分隔

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
                                 </li>
                                 <li class="has_submenu current open c-open">
                                     <a href="${SITE_URL}base_version"> <i class="fa fa-tasks ">                        </i>
-                                        <span>基础版本（从门店）</span>
+                                        <span>基础版本（种子店）</span>
                                     </a>
                                 </li>
                                 <li class="has_submenu current open c-open">
